[gd_scene load_steps=4 format=3 uid="uid://c0rjapwup4ro0"]

[ext_resource type="Script" uid="uid://cbu85kle22rwt" path="res://Scenes/trade_slot_button.gd" id="1_6l0m2"]
[ext_resource type="Texture2D" uid="uid://so3asmpeyfr5" path="res://Sprites/UI/Weapon_Icons/Weapon_Cell.png" id="1_lk435"]
[ext_resource type="Texture2D" uid="uid://4s4yukyivklx" path="res://Sprites/Items/coin.png" id="3_hy77d"]

[node name="TradeSlot" type="VBoxContainer"]
script = ExtResource("1_6l0m2")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
color = Color(0.548963, 0.548963, 0.548963, 1)

[node name="Amount" type="Label" parent="ColorRect"]
layout_mode = 2
offset_right = 128.0
offset_bottom = 34.0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeaponUnder" type="TextureRect" parent="."]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_lk435")

[node name="WeaponIcon" type="TextureRect" parent="WeaponUnder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="WeaponUnder/WeaponIcon"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
color = Color(0.20871, 0.20871, 0.20871, 1)

[node name="Price" type="Label" parent="ColorRect2"]
layout_mode = 2
offset_left = 48.0
offset_top = -1.0
offset_right = 128.0
offset_bottom = 33.0
theme_override_font_sizes/font_size = 24
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ColorRect2"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_right = 48.0
offset_bottom = 32.0
texture = ExtResource("3_hy77d")
